--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .animation {
     animation:slide 4s ease-in-out infinite alternate;
     background-image: linear-gradient(-60deg, rgb(45, 228, 66) 50%, #09f 50%);
