--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -3,8 +3,11 @@ body {
 }
 
 .animation {
-    animation:slide 4s ease-in-out infinite alternate;
-    background-image: linear-gradient(-60deg, rgb(45, 228, 66) 50%, #09f 50%);
+  animation:slide 8s ease-in-out infinite alternate;
+   background-image: linear-gradient(-5deg,
+   rgb(0,105,148) 50%,
+   #E7B744 51%
+   );
     bottom:0;
     left:-50%;
     opacity:.5;
@@ -16,7 +19,7 @@ body {
   
   .animation-2 {
     animation-direction:alternate-reverse;
-    animation-duration:5s;
+    animation-duration:5s;  
   }
   
   .animation-3 {
