--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -6,7 +6,7 @@ body {
   animation:slide 8s ease-in-out infinite alternate;
    background-image: linear-gradient(-5deg,
    rgb(0,105,148) 50%,
-   #E7B744 51%
+   #019CAD 51%
    );
     bottom:0;
     left:-50%;
